Fix sonar related issues